Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71697

Wayland clients flicker on NVIDIA hardware

XMLWordPrintable

    • Linux/Wayland
    • c584db87cf924f3a3d883288de8c2f4210186af6 (qt/qtwayland/5.12.1)

      When Qt 5.9.6 is used, flickering (frequent black frames) can be seen with the Wayland sample compositors qwindow-compositor and pure-qml and any Qt Wayland client (-platform wayland). Both, compositor and client have to use the threaded renderer. The same occurs on 5.12.0. Meanwhile there are following fixes available:

      https://codereview.qt-project.org/244739
      https://codereview.qt-project.org/244740
      https://codereview.qt-project.org/244741

      This is related to INC-1234510 and required for a customer product

        For Gerrit Dashboard: QTBUG-71697
        # Subject Branch Project Status CR V

            tvete Paul Olav Tvete
            vminenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: